# OceanHeatTransports

./: compute_transports_array.py  submit_means_SC.ipynb  submit_transports_SC_array.ipynb
jCMIP/: README.md  setup.cfg  setup.py
jCMIP/jCMIP/: CMIPgenerate.py  CMIPmeans.py  CMIPobject.py  CMIPread.py  CMIPtransports.py  __init__.py
jCMIP/jCMIP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jCMIP_setup/: LICENSE  README.md  determine_Omeshmask.ipynb  make_Atlantic_mask.ipynb  make_ORAS5_mesh_mask.ipynb  update_model_list.ipynb
