# setup.cfg

[metadata]
name = jCMIP 
license = MIT
url = https://github.com/jmecki/jCMIP

[options]
packages = jCMIP
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
install_requires =
    netCDF4
    numpy
    cftime
    setuptools
setup_requires =
    setuptools
    setuptools_scm
